fix mobile horizontal scroll

--- a/css/creative.css
+++ b/css/creative.css
@@ -5,13 +5,6 @@
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */
 
-.container {
-  padding-right: 0; /*15px in bootstrap.css*/
-  padding-left: 0;  /*idem*/
-  margin-right: auto;
-  margin-left: auto;
-}
-
 html {
   width: 100%;
   height: 100%;
